--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="styles/reset.css">
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,900italic' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="styles/style.css"/> 
+		<link rel="stylesheet" href="styles/style.css"/>
+		<link rel="icon" href="images/thermometer.gif">
 	</head>
 	<body>
 		
