--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 			<ul id="guessList" class="guessBox clearfix">
 
 			</ul>
+			<img id="sig" src="images/mjm.gif">
 
 		</section>
 		<!-- JavaScript -->
